--- a/ppms_project/profilingApp/templates/Initial.html
+++ b/ppms_project/profilingApp/templates/Initial.html
@@ -3,79 +3,136 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="stylesheet" href="../static/CSS/styles.css">
     <title>Document</title>
 </head>
 <body>
-    <div class="site-wrap">
-        <div class="site-header">
-            <nav class="navbar fixed-top navbar-expand-lg navbar-dark index__navbar">
-                <div class="nav-container">
-                    <a href="#" class="name">
-                        <img class="navbar-icon" src="../static/Media/avatar.png" alt="dasma-logo">
-                        <span class="brand__name ml-3 mr-3">City of Dasmariñas</span>
-                    </a>
-                    <ul class="nav-item">
-                        <li><a href="">Login</a></li>
-                        <li><a href="">Signup</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
-        <div class="site-footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4">
-                        <h2 class="footer-heading mb-4">About</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                            Modi cumque tenetur inventore veniam, hic vel ipsa necessitatibus 
-                            ducimus architecto fugiat!</p>
-                    </div>
-                    <div class="col-lg-8">
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <h2 class="footer-heading mb-4">Quick Links</h2>
-                                <ul class="list-unstyled">
-                                <li><a href="#">Symptoms</a></li>
-                                <li><a href="#">Prevention</a></li>
-                                <li><a href="#">FAQs</a></li>
-                                <li><a href="#">About Coronavirus</a></li>
-                                <li><a href="#">Contact Us</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-lg-4">
-                                <h2 class="footer-heading mb-4">Helpful Link</h2>
-                                <ul class="list-unstyled">
-                                <li><a href="#">Helathcare Professional</a></li>
-                                <li><a href="#">LGU Facilities</a></li>
-                                <li><a href="#">Protect Your Family</a></li>
-                                <li><a href="#">World Health</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-lg-4">
-                                <h2 class="footer-heading mb-4">Resources</h2>
-                                <ul class="list-unstyled">
-                                <li><a href="#">WHO Website</a></li>
-                                <li><a href="#">CDC Website</a></li>
-                                <li><a href="#">Gov Website</a></li>
-                                <li><a href="#">DOH Website</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row text-center">
-                    <div class="col-md-12">
-                        <div class="border-top pt-5">
-                            <p class="copyright"><small>
-                            Copyright ©<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                            </small>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+<!-- Header -->
+<div class="site-header">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark index__navbar scrolled">
+      <div class="nav-container">
+          <a href="#" class="name">
+              <img class="navbar-icon" src="../static/Media/avatar.png" alt="dasma-logo">
+              <span class="brand__name ml-3 mr-3">City of Dasmariñas</span>
+          </a>
+      </div>
+  </nav>
+</div>
+<!-- Form-->
+<div class="form">
+    <div class="form-toggle"></div>
+    <div class="form-panel one">
+      <div class="form-header">
+        <h1>Login</h1>
+      </div>
+      <div class="form-content">
+        <form>
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" id="username" name="username" required="required"/>
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" required="required"/>
+          </div>
+          <div class="form-group">
+            <label class="form-remember">
+              <input type="checkbox"/>Remember Me
+            </label><a class="form-recovery" href="#">Forgot Password?</a>
+          </div>
+          <div class="form-group">
+            <button type="submit">Log In</button>
+          </div>
+        </form>
+      </div>
     </div>
+    <div class="form-panel two">
+      <div class="form-header">
+        <h1>Register Account</h1>
+      </div>
+      <div class="form-content">
+        <form>
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" id="username" name="username" required="required"/>
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" required="required"/>
+          </div>
+          <div class="form-group">
+            <label for="cpassword">Confirm Password</label>
+            <input type="password" id="cpassword" name="cpassword" required="required"/>
+          </div>
+          <div class="form-group">
+            <label for="email">Email Address</label>
+            <input type="email" id="email" name="email" required="required"/>
+          </div>
+          <div class="form-group">
+            <button type="submit">Register</button>
+          </div>
+        </form>
+      </div>
+    </div>
+</div>
+  
+    <!-- Footer -->
+<div class="site-footer">
+  <div class="container">
+      <div class="row">
+          <div class="col-lg-4">
+              <h2 class="footer-heading mb-4">About</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                  Modi cumque tenetur inventore veniam, hic vel ipsa necessitatibus 
+                  ducimus architecto fugiat!
+              </p>
+              <div class="my-5">
+                  <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
+                  <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
+                  <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+                  <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
+              </div>
+          </div>
+          <div class="col-lg-8">
+              <div class="row">
+                  <div class="col-lg-4">
+                      <h2 class="footer-heading mb-4">Quick Links</h2>
+                      <ul class="list-unstyled">
+                      <li><a href="#">FAQs</a></li>
+                      <li><a href="#">Contact Us</a></li>
+                      </ul>
+                  </div>
+                  <div class="col-lg-4">
+                      <h2 class="footer-heading mb-4">Helpful Link</h2>
+                      <ul class="list-unstyled">
+                      <li><a href="#">Healthcare Professional</a></li>
+                      <li><a href="#">LGU Facilities</a></li>
+                      </ul>
+                  </div>
+                  <div class="col-lg-4">
+                      <h2 class="footer-heading mb-4">Resources</h2>
+                      <ul class="list-unstyled">
+                      <li><a href="#">NNC Website</a></li>
+                      <li><a href="#">DOH Website</a></li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <div class="row text-center">
+          <div class="col-md-12">
+              <div class="border-top pt-5">
+                  <p class="copyright"><small>
+                  Copyright ©<script>document.write(new Date().getFullYear());</script> All rights reserved <i class="icon-heart text-danger" aria-hidden="true"></i>
+                  </small>
+                  </p>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
 </body>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="../static/Javascript/testscript.js"></script>
 </html>
