--- a/ppms_project/profilingApp/templates/Initial.html
+++ b/ppms_project/profilingApp/templates/Initial.html
@@ -12,9 +12,9 @@
 <div class="site-header">
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark index__navbar scrolled">
       <div class="nav-container">
-          <a href="#" class="name">
+          <a href="#" class="name" style="text-decoration: none;">
               <img class="navbar-icon" src="../static/Media/avatar.png" alt="dasma-logo">
-              <span class="brand__name ml-3 mr-3">City of Dasmariñas</span>
+              <span id="hidetitle" class="brand__name ml-3 mr-3">City of Dasmariñas - Preschooler Profiling and Monitoring</span>
           </a>
       </div>
   </nav>
