--- a/ppms_project/profilingApp/static/CSS/styles.css
+++ b/ppms_project/profilingApp/static/CSS/styles.css
@@ -14,10 +14,13 @@
   transition: background-color 200ms linear;
   border-bottom: 1px #d4d4d4 solid;
 }
-
+.navbar{
+  background-color:rgb(255, 255, 255);
+  transition: 0.5s ease-in-out;
+}
 .navbar-icon {
     width: 45px;
-    max-width: 55px;
+    max-width: 50px;
 }
 img {
     vertical-align: middle;
@@ -75,6 +78,114 @@ a{
 .nav-container .nav-item .active {
     background-color: rgb(40, 167, 69);
     color: rgb(255, 255, 255);
+}
+
+/* Header hide title when minimized */
+
+@media screen and (max-width: 770px) {
+  #hidetitle {
+    display: none;
+  }
+} 
+
+/* Header Dropdown Button */
+
+#Headerddb {
+  padding:5%;
+  background-color: #2c5f2dff;
+  color: white;
+  border: none;
+  font-size: medium;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  overflow: hidden;
+}
+
+#Headerddb,
+i {
+  margin-right: 5px;
+}
+
+#Headerddb:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  background-color: rgb(33, 146, 71);
+  -webkit-transform: scale(1.05);
+  transform: scale(1.05);
+}
+
+#dropdown-menu li a {
+  margin-bottom: 3px;
+  text-align: left;
+  display: block;
+  box-sizing: border-box;
+  transition: 0.5s;
+}
+
+#dropdown-menu li:hover a {
+  padding-left: 18px;
+  background-color: rgb(33, 146, 71);
+  color: #FFFF;
+  transition: 0.4s;
+}
+
+/* Body transition */
+#grid,#footer,#mysidenav,#header{
+  transition: 0.5s ease-in-out;
+}
+
+#header{
+  background-color: rgba(0, 255, 85, 0.205);
+}
+#grid{
+  background-color: rgba(253, 253, 253, 0.952);
+  position: relative;
+    width: auto;
+    margin: auto;
+}
+/* Side Navigation */
+
+#mySidenav {
+    background-color: rgba(0, 255, 85, 0.205);
+    height: 100%;
+    width: 0px;
+    line-height: 55px;
+    position: fixed;
+    z-index: 1;
+    top: 83px;
+    overflow-x: hidden;
+}
+
+.sidenav .buttons a{
+    padding: 0px 0px 0px 27px;
+    text-align: left;
+    font-size: 1rem;
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.863);
+    display: block;
+    box-sizing: border-box;
+    border-bottom:1px ridge rgba(59, 57, 57, 0.027);
+    border-left:3px solid rgba(59, 57, 57, 0.199);
+}
+
+#home{
+    border-top:1px ridge rgba(59, 57, 57, 0.082);
+}
+
+.sidenav .buttons a:hover{
+    color: rgb(0, 0, 0);
+    transition:0.1s;
+    border-left:5px solid rgb(33, 146, 71);
+}
+
+
+@media screen and (max-height: 450px) {
+    .sidenav {
+        padding-top: 15px;
+    }
+    .sidenav a {
+        font-size: 18px;
+    }
 }
 
 /* Login Form */
@@ -305,7 +416,13 @@ html {
   }
 
   /* Footer */
-
+  #footer{
+    background-color: rgba(230, 230, 230, 0.952);
+    position: relative;
+    width: auto;
+    margin: auto;
+  }
+  
 .row {
   display: -webkit-box;
   display: -ms-flexbox;
