--- a/ppms_project/profilingApp/static/CSS/styles.css
+++ b/ppms_project/profilingApp/static/CSS/styles.css
@@ -82,17 +82,37 @@ a{
 
 /* Header hide title when minimized */
 
-@media screen and (max-width: 770px) {
-  #hidetitle {
+@media screen and (max-width: 1000px) {
+  #hideTitle {
+    display: none;
+  }
+} 
+
+@media screen and (max-width: 555px) {
+  #hideUserLabel {
     display: none;
   }
 } 
 
 /* Header Dropdown Button */
 
+#navbutton{
+  margin:2px;
+  color:#2c5f2dff;text-decoration:none;
+}
+
+#navbutton:hover{
+  transform: scale(1.05);
+  color:rgb(87, 184, 8);
+  margin-left: 5px;
+  margin-right: 5px;
+  transition:1s;
+  
+}
+
 #Headerddb {
   padding:5%;
-  background-color: #2c5f2dff;
+  background-color: rgb(44, 95, 44);
   color: white;
   border: none;
   font-size: medium;
@@ -128,7 +148,43 @@ i {
   color: #FFFF;
   transition: 0.4s;
 }
+/* Parent Home Button Styling */
 
+#parentHomeButton{
+  
+  padding:5%;
+  background-color: rgb(44, 95, 44);
+  color: #ffe77aff;
+  font-size: small;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  margin:2px;
+  width:auto;
+
+
+}
+
+#parentHomeButton:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  background-color: rgb(33, 146, 71);
+  -webkit-transform: scale(1.05);
+  transform: scale(1.05);
+}
+
+/* BHW Preschooler Profile Buttons */
+
+#validateBhwButton{
+  width: 350px;
+  padding:5%;
+  margin: 3px;
+  background-color: rgb(44, 95, 44);
+  color: #ffe77aff;
+  font-size: small;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
 /* Body transition */
 #grid,#footer,#mysidenav,#header{
   transition: 0.5s ease-in-out;
@@ -157,7 +213,7 @@ i {
 }
 
 .sidenav .buttons a{
-    padding: 0px 0px 0px 27px;
+    padding: 0px 0px 0px 15px;
     text-align: left;
     font-size: 1rem;
     text-decoration: none;
