--- a/ppms_project/profilingApp/templates/Admin Validate BHW.html
+++ b/ppms_project/profilingApp/templates/Admin Validate BHW.html
@@ -17,18 +17,23 @@
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark index__navbar scrolled" id="header">
     <div class="container-fluid">
       <div>
-        <span style="font-size:20px;cursor:pointer; color:#2c5f2dff; margin-left:10px;" id="navButton" onclick="openOffcanvas()"><i class="fa fa-fw fa-bars"></i></span>
-        <a href="#" class="name" style="text-decoration: none;">
             <img class="navbar-icon" style="margin-left:15px;" src="../static/Media/avatar.png" alt="dasma-logo">
-            <span id="hidetitle" class="brand__name" style="color:#2c5f2dff;">City of Dasmariñas - Preschooler Profiling and Monitoring</span>
+            <span id="hideTitle" class="brand__name" style="color:#2c5f2dff;">City of Dasmariñas - Preschooler Profiling and Monitoring</span>
         </a>
       </div>
-      <div class="dropdown">
+      <div class="buttons">
+        <span id="hideUserLabel":class="brand__name" style="color:#2c5f2dff;"></i>Welcome Admin | </span>
+        <a id="navbutton" href="/ppms_project/profilingApp/templates/Admin Home.html" ><i class="fa fa-fw fa-home"></i>Home </a>
+        <a id="navbutton" href="/ppms_project/profilingApp/templates/Admin Validate BHW.html" ><i class="fa fa-fw fa-user-nurse"></i>Validate BHW </a>
+        <a id="navbutton" href="/ppms_project/profilingApp/templates/Admin Validate BHW.html" ><i class="fa fa-fw fa-arrow-right"></i>Logout </a>
+      </div>
+      
+      <!-- <div class="dropdown">
         <button class="btn dropdown-toggle" type="button" id= "Headerddb" data-bs-toggle="dropdown" style="margin-right:15px; color:#ffe77aff"><i class="fa fa-fw fa-user"></i>Admin</button>
         <ul class="dropdown-menu" id="dropdown-menu">
             <li><a class="dropdown-item" href="#">Log Out</a></li>
         </ul>
-      </div>
+      </div> -->
   </div>
   </nav>
 </div>
@@ -37,8 +42,8 @@
 <div id="mySidenav" class="sidenav">
   <ul class="list-unstyled ps-0">
       <div class="buttons">
-          <a id="home" href="/ppms_project/profilingApp/templates/Admin Home.html"><i class="fa fa-fw fa-home"></i>Home</a>
-          <a href="/ppms_project/profilingApp/templates/Admin Validate BHW.html"><i class="fa fa-fw fa-user-nurse"></i>Validate BHW</a>
+        <a id="home" href="/ppms_project/profilingApp/templates/Admin Home.html"><i class="fa fa-fw fa-home"></i>Home</a>
+        <a href="/ppms_project/profilingApp/templates/Admin Validate BHW.html"><i class="fa fa-fw fa-user-nurse"></i>Validate BHW</a>
       </div>
       <br>
   </ul>
@@ -48,9 +53,24 @@
 <!-- Dashboard -->
     <div id="grid" class="container-fluid" style="padding:7%; margin-top:83px;">
       <div class="container-grid">
-          <h2 style="text-align:left;">Overall Data</h2>
-          <hr>
-          <br>
+        <div class="container">
+        <div class="row"> 
+            <div class="col">
+                <h3 style="text-align:left;">Validate Barangay Health Workers</h3>
+            </div>
+            <div class="col">
+                <form class="form-inline">
+                    <div class="input-group">
+                        <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </div>
+                </form>
+            </div>
+            </div>
+            <hr>
+            <br>
+        </div>
+        </div>
           <!-- MAIN CARDS STARTS HERE -->
           <div class="row">
               <div class="col-xl-3 col-md-4">
@@ -85,23 +105,18 @@
                       </div>
                   </div>
               </div>
-
-              <main>
-                  <div class="container-fluid px-4">
-                      <div class="card text-dark mb-4">
-                          <div class="card-header" style="background-color:rgba(0, 255, 85, 0.205)">
-                              <i class="fas fa-chart-pie me-1"></i> Pie Chart 
-                          </div>
-                          <div class="row g-0">
-                              <div class="col-md-12">
-                                  <canvas id="myPieChart" width="100%" height="40"></canvas>
-                              </div>
-                          </div>
-                          <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
-                      </div>
-                  </div>
-              </main>
           </div>
+          <hr>
+        <br>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <button class="btn float-end" type="button" id= "parentHomeButton"><i class="fa fa-fw fa-user-shield"></i>Validate Account</button>
+                </div>
+                <div class="col">
+                    <button class="btn" type="button" id= "parentHomeButton"><i class="fa fa-fw fa-user-slash"></i>Delete Profile</button>
+                </div>
+            </div>
       </div>
   </div>
 <!-- Form-->
