--- a/ppms_project/profilingApp/templates/BHW Home.html
+++ b/ppms_project/profilingApp/templates/BHW Home.html
@@ -24,7 +24,7 @@
         </a>
       </div>
       <div class="dropdown">
-        <button class="btn dropdown-toggle" type="button" id= "Headerddb" data-bs-toggle="dropdown" style="margin-right:15px; color:#ffe77aff"><i class="fa fa-fw fa-user"></i>Admin</button>
+        <button class="btn dropdown-toggle" type="button" id= "Headerddb" data-bs-toggle="dropdown" style="margin-right:15px; color:#ffe77aff"><i class="fa fa-fw fa-user"></i>BHW</button>
         <ul class="dropdown-menu" id="dropdown-menu">
             <li><a class="dropdown-item" href="#">Log Out</a></li>
         </ul>
@@ -36,9 +36,11 @@
 <!-- Side Nav -->
 <div id="mySidenav" class="sidenav">
   <ul class="list-unstyled ps-0">
-      <div class="buttons">
-          <a id="home" href="/ppms_project/profilingApp/templates/Admin Home.html"><i class="fa fa-fw fa-home"></i>Home</a>
-          <a href="/ppms_project/profilingApp/templates/Admin Validate BHW.html"><i class="fa fa-fw fa-user-nurse"></i>Validate BHW</a>
+    <div class="buttons">
+        <a id="home" href="/ppms_project/profilingApp/templates/BHW Home.html"><i class="fa fa-fw fa-home"></i>Home</a>
+        <a href="/ppms_project/profilingApp/templates/BHW Preschooler Profile.html"><i class="fa fa-fw fa-id-card"></i>Preschooler Profile</a>
+        <a href="/ppms_project/profilingApp/templates/BHW Immunization Schedule.html"><i class="fa fa-fw fa-shield-virus"></i>Immunization Schedule</a>
+    </div>
       </div>
       <br>
   </ul>
@@ -48,7 +50,7 @@
 <!-- Dashboard -->
     <div id="grid" class="container-fluid" style="padding:7%; margin-top:83px;">
       <div class="container-grid">
-          <h2 style="text-align:left;">Overall Data</h2>
+          <h2 style="text-align:left;">Overall BMI Status of Preschooler</h2>
           <hr>
           <br>
           <!-- MAIN CARDS STARTS HERE -->
