--- a/ppms_project/profilingApp/templates/BHW Immunization Schedule.html
+++ b/ppms_project/profilingApp/templates/BHW Immunization Schedule.html
@@ -52,7 +52,7 @@
       <div class="container-grid">
             <div class="row"> 
                 <div class="col-sm-6">
-                    <h3 style="text-align:left;">Preschoolers' Profile</h3>
+                    <h3 style="text-align:left;">Immunization Schedule</h3>
                 </div>
                 <div class="col-sm-6 ">
                     <form class="form-inline ">
