--- a/ppms_project/profilingApp/templates/Admin Home.html
+++ b/ppms_project/profilingApp/templates/Admin Home.html
@@ -20,11 +20,11 @@
         <span style="font-size:20px;cursor:pointer; color:#2c5f2dff; margin-left:10px;" id="navButton" onclick="openOffcanvas()"><i class="fa fa-fw fa-bars"></i></span>
         <a href="#" class="name" style="text-decoration: none;">
             <img class="navbar-icon" style="margin-left:15px;" src="../static/Media/avatar.png" alt="dasma-logo">
-            <span id="hidetitle" class="brand__name" style="color:#2c5f2dff;">City of Dasmariñas - Preschooler Profiling and Monitoring</span>
+            <span id="hidetitle" class="brand__name" style="color:#2c5f2dff;">City of Dasmariñas</span>
         </a>
       </div>
       <div class="dropdown">
-        <button class="btn dropdown-toggle" type="button" id= "Headerddb" data-bs-toggle="dropdown" style="margin-right:15px; color:#ffe77aff"><i class="fa fa-fw fa-user"></i>Admin</button>
+        <button class="btn dropdown-toggle" type="button" id= "Headerddb" data-bs-toggle="dropdown" style="margin-right:30px;"> <i class="fa fa-fw fa-user"></i>Admin</button>
         <ul class="dropdown-menu" id="dropdown-menu">
             <li><a class="dropdown-item" href="#">Log Out</a></li>
         </ul>
@@ -46,7 +46,7 @@
 <div id="myCanvasNav" onclick="closeOffcanvas()"></div>
   
 <!-- Dashboard -->
-    <div id="grid" class="container-fluid" style="padding:7%; margin-top:83px;">
+    <div id="grid" class="container-fluid">
       <div class="container-grid">
           <h2 style="text-align:left;">Overall Data</h2>
           <hr>
@@ -55,7 +55,7 @@
           <div class="row">
               <div class="col-xl-3 col-md-4">
                   <div class="card text-dark bg-light mb-4">
-                      <div class="card-header" style="background-color:rgba(0, 255, 85, 0.205)"><i class="fas fa-check" style="color: green; position:relative; margin-right:10px;"></i>Total No. of Validated BHW</div>
+                      <div class="card-header"><i class="fas fa-check" style="color: green; position:relative; margin-right:10px;"></i>Number of Validated BHW</div>
                       <div class="card-body">
                           <h5 class="card-title">200</h5>
                       </div>
@@ -63,7 +63,7 @@
               </div>
               <div class="col-xl-3 col-md-4">
                   <div class="card text-dark bg-light mb-4">
-                      <div class="card-header" style="background-color:rgba(0, 255, 85, 0.205)"><i class="fas fa-spinner" style="color:orange; position:relative; margin-right:10px;"></i>Total No. of Non-Validated BHW</div>
+                      <div class="card-header"><i class="fas fa-spinner" style="color:orange; position:relative; margin-right:10px;"></i>Number of Non-Validated BHW</div>
                       <div class="card-body">
                           <h5 class="card-title">200</h5>
                       </div>
@@ -71,7 +71,7 @@
               </div>
               <div class="col-xl-3 col-md-4">
                   <div class="card text-dark bg-light mb-4">
-                      <div class="card-header" style="background-color:rgba(0, 255, 85, 0.205)"><i class="fas fa-user"></i>Total No. of Parents</div>
+                      <div class="card-header"><i class="fas fa-user"></i>Number of Parents</div>
                       <div class="card-body">
                           <h5 class="card-title">200</h5>
                       </div>
@@ -79,7 +79,7 @@
               </div>
               <div class="col-xl-3 col-md-4">
                   <div class="card text-dark bg-light mb-4">
-                      <div class="card-header" style="background-color:rgba(0, 255, 85, 0.205)"><i class="fas fa-user-circle"></i>Total Number of Preschoolers</div>
+                      <div class="card-header"><i class="fas fa-user-circle"></i>Number of Preschoolers</div>
                       <div class="card-body">
                           <h5 class="card-title">200</h5>
                       </div>
@@ -88,8 +88,8 @@
 
               <main>
                   <div class="container-fluid px-4">
-                      <div class="card text-dark mb-4">
-                          <div class="card-header" style="background-color:rgba(0, 255, 85, 0.205)">
+                      <div class="card text-dark bg-light mb-4">
+                          <div class="card-header">
                               <i class="fas fa-chart-pie me-1"></i> Pie Chart 
                           </div>
                           <div class="row g-0">
