--- a/ppms_project/profilingApp/templates/Initial.html
+++ b/ppms_project/profilingApp/templates/Initial.html
@@ -7,28 +7,25 @@
     <link rel="stylesheet" href="../static/CSS/styles.css">
     <link rel="stylesheet" href="../static/CSS/font-awesome/css/all.min.css">
     <link rel="stylesheet" href="../static/CSS/css/bootstrap.min.css">
-    <meta charset="UTF-8">
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../static/Javascript/js/jquery.min.js"></script>
     <title>Document</title>
-
 </head>
 <body>
-  <div id="bodygradient">
-    <br>  
 <!-- Header -->
-<div class="site-header">
+<div class="site-header" >
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark index__navbar scrolled">
-      <div class="nav-container">
-          <a href="#" class="name" style="text-decoration: none;">
-              <img class="navbar-icon" src="../static/Media/avatar.png" alt="dasma-logo">
-              <span id="hidetitle" class="brand__name ml-3 mr-3">City of Dasmariñas - Preschooler Profiling and Monitoring System</span>
-          </a>
+    <div class="container-fluid">
+      <div>
+            <img class="navbar-icon" style="margin-left:15px;" src="../static/Media/avatar.png" alt="dasma-logo">
+            <span id="hideHomeTitle" class="brand__name" style="color:#2c5f2dff;">City of Dasmariñas - Preschooler Profiling and Monitoring</span>
+        </a>
       </div>
+  </div>
   </nav>
 </div>
 <!-- Form-->
+<div class="container-fluid" style="background-image: linear-gradient(to top, rgba(230, 250, 202, 0.884), rgb(255, 255, 255));">
+  <br>
 <div class="form">
     <div class="form-toggle"></div>
     <div class="form-panel one">
@@ -62,43 +59,55 @@
       </div>
       <div class="form-content">
         <form>
-          <div class="form-group">
-            <button type="button" data-toggle="modal" data-target="#myModal" id="regButton" style="margin-top: 10%;">I AM AN ADMIN</button>
+          <div class="input-group mb-3">
+            <label for="userTypeSelect">User Type</label>
+            <select class="custom-select" id="userTypeSelect">
+              <option selected >Choose User Type</option>
+              <option value="1">Barangay Health Worker</option>
+              <option value="2">Parent</option>
+            </select>
+            <br>
           </div>
-          <!-- Registration Modal Admin -->
-            <div id="myModal" class="modal fade" role="dialog">
-              <div class="modal-dialog">
-            
-                <!-- Modal content-->
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Modal Header</h4>
-                  </div>
-                  <div class="modal-body">
-                    <p>Some text in the modal.</p>
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                  </div>
-                </div>
+          <div class="form-group">
+            <div class="row">
+              <div class="col">
+                <label for="firstname">First Name</label>
+            <input type="text" id="firstname" name="firstname" placeholder="First Name" required="required"/>
+              </div>
+              <div class="col">
+                <label for="lastname">Last Name</label>
+            <input type="text" id="lastname" name="lastname" placeholder="Last Name" required="required"/>
               </div>
             </div>
-
-          <div class="form-group">
-            <button type="button" data-toggle="modal" data-target="#myModal" id="regButton">I AM A HEALTH WORKER</button>
           </div>
           <div class="form-group">
-            <button type="button" data-toggle="modal" data-target="#myModal" id="regButton" style="margin-bottom: 20%;">I AM A PARENT</button>
+            <label for="username">Username</label>
+            <input type="text" id="username" name="username" placeholder="Enter Your User Name" required="required"/>
           </div>
-          <br><br>
+          <div class="form-group">
+            <label for="email">Email Address</label>
+            <input type="email" id="email" name="email" placeholder="Enter Your Email Address" required="required"/>
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" id="password"  aria-describedby="passwordHelpBlock" placeholder="Enter Your Password"name="password" required="required"/>
+            <!-- <small id="passwordHelpBlock"> Must be 8-20 Characters.</small> -->
+          </div>
+          <div class="form-group">
+            <label for="cpassword">Confirm Password</label>
+            <input type="password" id="cpassword" name="cpassword" placeholder="Confirm Your Password" required="required"/>
+          </div>
+          <div class="form-group">
+            <button type="submit">Register</button>
+          </div>
         </form>
       </div>
     </div>
 </div>
-<br>
+<!-- Spacing -->
+<br><br><br><br><br>
+<!-- Spacing  -->
 </div>
-
     <!-- Footer -->
 <div class="site-footer">
   <div class="container">
