--- a/ppms_project/profilingApp/templates/Initial.html
+++ b/ppms_project/profilingApp/templates/Initial.html
@@ -24,7 +24,7 @@
   </nav>
 </div>
 <!-- Form-->
-<div class="container-fluid" style="background-image: linear-gradient(to top, rgba(230, 250, 202, 0.884), rgb(255, 255, 255));">
+<div class="container-fluid" id="homeBody">
   <br>
 <div class="form">
     <div class="form-toggle"></div>
