--- a/ppms_project/profilingApp/templates/Parent Home.html
+++ b/ppms_project/profilingApp/templates/Parent Home.html
@@ -22,7 +22,7 @@
           </a>
         </div>
         <div class="buttons">
-          <span class="brand__name" style="color:#2c5f2dff;"></i>Welcome Guardian | </span>
+          <span class="brand__name" style="color:#2c5f2dff;"></i><i class="fa fa-fw fa-user"></i>Welcome Guardian | </span>
           <a id="navbutton" href="/ppms_project/profilingApp/templates/Admin Validate BHW.html" ><i class="fa fa-fw fa-arrow-right"></i>Logout </a>
         </div>
         
@@ -48,7 +48,7 @@
 <div id="myCanvasNav" onclick="closeOffcanvas()"></div>
    -->
 <!-- Dashboard -->
-    <div id="grid" class="container-fluid" style="padding:7%; margin-top:83px;">
+    <div id="grid" class="container-fluid" style="padding:7%; margin-top:83px;background-image: linear-gradient(to top, rgba(245, 255, 231, 0.884), rgb(255, 255, 255));">
       <div class="container-fluid">
         <div class="row"> 
         <div class="col">
@@ -57,8 +57,55 @@
         <div class="col">
             <div class="row">
                 <div class="col">
-                    <button class="btn float-end" type="button" id= "parentHomeButton"><i class="fa fa-fw fa-id-card"></i>Register New Preschooler</button>
+                    <button class="btn float-end" type="button" id= "parentHomeButton" data-bs-toggle="modal" data-bs-target="#addPreschooler"><i class="fa fa-fw fa-id-card"></i>Register New Preschooler</button>
                 </div>
+                <!-- Modal Sign in -->
+    <div class="modal fade" id="addPreschooler" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <h5 class="modal-title" id="exampleModalLabel">Register New Preschooler</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form action="" method="POST">
+                    <div class="modal-body mx-4">
+
+                        <div class="form-group">
+                            <div class="row">
+                              <div class="col">
+                                <label for="firstname">First Name</label>
+                            <input type="text" id="firstname" name="firstname" placeholder="First Name" required="required"/>
+                              </div>
+                              <div class="col">
+                                <label for="lastname">Last Name</label>
+                            <input type="text" id="lastname" name="lastname" placeholder="Last Name" required="required"/>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="form-group">
+                            <label for="address">Address</label>
+                            <input type="text" id="address" name="address" placeholder="Enter Preschooler's Address" required="required"/>
+                          </div>
+                          <div class="form-group">
+                            <label for="password">Date of Birth:</label>
+                            <input type="password" id="password"  aria-describedby="passwordHelpBlock" placeholder="Enter Your Password"name="password" required="required"/>
+                            <!-- <small id="passwordHelpBlock"> Must be 8-20 Characters.</small> -->
+                          </div>
+                          <div class="form-group">
+                            <label for="cpassword">Confirm Password</label>
+                            <input type="password" id="cpassword" name="cpassword" placeholder="Confirm Your Password" required="required"/>
+                          </div>
+                        <br>
+                        <div class="text-center mb-3">
+                            <a style="color: white; text-decoration: none;"><button type="submit"   d-color: #168300; color: white;" class="btn btn-block z-depth-1a">Register</button></a>
+
+                        </div>
+                    </div>
+                </form>
+
+            </div>
+        </div>
+    </div>
                 <div class="col">
                     <button class="btn float-end" type="button" id= "parentHomeButton"><i class="fa fa-fw fa-bullhorn"></i>Announcements / Updates</button>
                 </div>
@@ -123,7 +170,7 @@
 <!-- Form-->
 
     <!-- Footer -->
-<div class="site-footer" id="footer">
+<div class="site-footer" id="footer" style="background-color: rgb(255, 255, 255);">
   <div class="container">
       <div class="row">
           <div class="col-lg-4">
