--- a/ppms_project/profilingApp/templates/activities/index.html
+++ b/ppms_project/profilingApp/templates/activities/index.html
@@ -163,5 +163,5 @@
       </div>
 </body>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<!-- <script src="../static/Javascript/testscript.js"></script> -->
+<script src="../static/Javascript/testscript.js"></script>
 </html>
