--- a/ppms_project/profilingApp/templates/activities/index.html
+++ b/ppms_project/profilingApp/templates/activities/index.html
@@ -83,6 +83,7 @@
                         <div class="form-group">
                             <label for="">Email Address</label>
                             {{ form.email }}
+                            <!-- <input type="email" id="email" name="email" placeholder="Enter Your Email Address" required="required"/> -->
                         </div>
                 
                         <div class="form-group">
