login_check & spread static files

--- a/ppms_project/profilingApp/templates/activities/Parent Home.html
+++ b/ppms_project/profilingApp/templates/activities/Parent Home.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../static/CSS/css/bootstrap.min.css">
     <script src="../static/Javascript/js/jquery.min.js"></script>
 
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
 <!-- Header -->
@@ -23,7 +23,7 @@
         </div>
         <div class="buttons">
           <span class="brand__name" style="color:#2c5f2dff;"></i><i class="fa fa-fw fa-user"></i>Welcome Guardian | </span>
-          <a id="navbutton" href="/ppms_project/profilingApp/templates/Admin Validate BHW.html" ><i class="fa fa-fw fa-arrow-right"></i>Logout </a>
+          <a id="navbutton" href="{% url 'logout' %}" ><i class="fa fa-fw fa-arrow-right"></i>Logout </a>
         </div>
         
         <!-- <div class="dropdown">
