--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../static/CSS/css/bootstrap.min.css">
     <script src="../static/Javascript/js/jquery.min.js"></script>
 
-    <title>Document</title>
+    <title>Administration Home</title>
 </head>
 <body>
 <!-- Header -->
@@ -26,7 +26,7 @@
       <div class="dropdown">
         <button class="btn dropdown-toggle" type="button" id= "Headerddb" data-bs-toggle="dropdown" style="margin-right:30px;"> <i class="fa fa-fw fa-user"></i>Admin</button>
         <ul class="dropdown-menu" id="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Log Out</a></li>
+            <li><a class="dropdown-item" href="{% url 'logout' %}">Log Out</a></li>
         </ul>
       </div>
   </div>
