--- a/ppms_project/profilingApp/templates/activities/login_registration.html
+++ b/ppms_project/profilingApp/templates/activities/login_registration.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
+<!DOCTYPE html>{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../static/CSS/styles.css">
-    <link rel="stylesheet" href="../static/CSS/font-awesome/css/all.min.css">
-    <link rel="stylesheet" href="../static/CSS/css/bootstrap.min.css">
-    <script src="../static/Javascript/js/jquery.min.js"></script>
-    <title>Document</title>
+    <link rel="stylesheet" href="{% static '/CSS/styles.css' %}">
+    <link rel="stylesheet" href="{% static '/CSS/font-awesome/css/all.min.css' %}">
+    <link rel="stylesheet" href="{% static '/CSS/css/bootstrap.min.css' %}">
+    <script src="{% static '/Javascript/js/jquery.min.js' %}"></script>
+    <title>Preschoolers Profiling and Monitoring System</title>
 </head>
 <body>
     <!-- Header -->
@@ -34,10 +34,11 @@
                     <h1>Login</h1>
                 </div>
                 <div class="form-content">
-                    <form action="">
+                    <form method="POST" action="">
+                        {% csrf_token %}
                         <div class="form-group">
-                            <label for="">Username</label>
-                            <input type="text" id="username" name="username">
+                            <label for="">Email</label>
+                            <input type="text" id="username" name="email">
                         </div>
                         <div class="form-group">
                             <label for="">Password</label>
@@ -83,7 +84,6 @@
                         <div class="form-group">
                             <label for="">Email Address</label>
                             {{ form.email }}
-                            <!-- <input type="email" id="email" name="email" placeholder="Enter Your Email Address" required="required"/> -->
                         </div>
                 
                         <div class="form-group">
@@ -97,7 +97,7 @@
                         </div>
                 
                         <div class="form-group">
-                            <button type="submit">Register</button>
+                            <button name="register_btn" type="submit">Register</button>
                         </div>
                     </form>
                 </div>  
@@ -164,5 +164,5 @@
       </div>
 </body>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="../static/Javascript/testscript.js"></script>
+<script src="{% static '/Javascript/testscript.js' %}"></script>
 </html>
