Update BHW Preschooler Profile.html

--- a/ppms_project/profilingApp/templates/activities/BHW Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Preschooler Profile.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{% static '/CSS/font-awesome/css/all.min.css' %}">
     <link rel="stylesheet" href="{% static '/CSS/css/bootstrap.min.css' %}">
     <script src="{% static '/Javascript/js/jquery.min.js' %}"></script>
+    <script src="{% static '/Javascript/js/Chart.min.js' %}" crossorigin="anonymous"></script>
 
     <title>Preschooler Profile</title>
 </head>
@@ -192,6 +193,7 @@
 </div>
 <script src="{% static '/Javascript/js/functions.js' %}"></script>
 <script src="{% static '/Javascript/js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static '/Javascript/js/pie-chart-layout.js' %}"></script>
 </body>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="{% static '/Javascript/testscript.js' %}"></script>
