--- a/ppms_project/profilingApp/static/CSS/styles.css
+++ b/ppms_project/profilingApp/static/CSS/styles.css
@@ -12,7 +12,7 @@
 .fixed-top.scrolled {
   background-color: #fff !important;
   transition: background-color 200ms linear;
-  border-bottom: 1px #d4d4d4 solid;
+
 }
 .navbar{
   transition: 0.5s ease-in-out;
@@ -151,7 +151,7 @@ i {
 
 #dropdown-menu li:hover a {
   padding-left: 18px;
-  background-color: rgb(33, 146, 71);
+  background-color: rgba(255, 255, 255, 0.829);
   color: #FFFF;
   transition: 0.4s;
 }
@@ -215,7 +215,6 @@ i {
     z-index: 1;
     top: 83px;
     overflow-x: hidden;
-    box-shadow: 0 5px 40px rgb(0 0 0 / 20%);
 }
 
 .sidenav .buttons a{
