--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -1,4 +1,5 @@
-<html lang="en">{% load static %}
+{% load static %}
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +16,7 @@
 <body>
 <!-- Header -->
 <div class="site-header" id="header">
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark index__navbar scrolled" id="header">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark index__navbar scrolled border-bottom" id="header">
     <div class="container-fluid">
       <div>
         <span style="font-size:20px;cursor:pointer; color:#2c5f2dff; margin-left:10px;" id="navButton" onclick="openOffcanvas()"><i class="fa fa-fw fa-bars"></i></span>
@@ -25,7 +26,7 @@
         </a>
       </div>
       <div class="dropdown">
-        <button class="btn dropdown-toggle" type="button" id= "Headerddb" data-bs-toggle="dropdown" style="margin-right:30px;"> <i class="fa fa-fw fa-user"></i>Admin</button>
+        <button class="btn dropdown-toggle" type="button" id= "Headerddb" data-bs-toggle="dropdown" style="margin-right:15px; color:#ffe77aff"> <i class="fa fa-fw fa-user"></i>Admin</button>
         <ul class="dropdown-menu" id="dropdown-menu">
             <li><a class="dropdown-item" href="{% url 'logout' %}">Log Out</a></li>
         </ul>
@@ -47,6 +48,7 @@
 <div id="myCanvasNav" onclick="closeOffcanvas()"></div>
   
 <!-- Dashboard -->
+{% block dashboard%}
     <div id="grid" class="container-fluid">
       <div class="container-grid">
           <h2 style="text-align:left;">Overall Data</h2>
@@ -105,6 +107,7 @@
           </div>
       </div>
   </div>
+{% endblock %}
 <!-- Form-->
 
     <!-- Footer -->
