--- a/ppms_project/profilingApp/templates/activities/Admin Validate BHW.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Validate BHW.html
@@ -1,184 +1,73 @@
-<html lang="en">{% load static %}
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="stylesheet" href="{% static '/CSS/styles.css' %}">
-    <link rel="stylesheet" href="{% static '/CSS/font-awesome/css/all.min.css' %}">
-    <link rel="stylesheet" href="{% static '/CSS/css/bootstrap.min.css' %}">
-    <script src="{% static '/Javascript/js/jquery.min.js' %}"></script>
-
-    <title>Validation</title>
-</head>
-<body>
-<!-- Header -->
-<div class="site-header" id="header">
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark index__navbar scrolled" id="header">
-    <div class="container-fluid">
-      <div>
-            <img class="navbar-icon" style="margin-left:15px;" src="../static/Media/avatar.png" alt="dasma-logo">
-            <span id="hideTitle" class="brand__name" style="color:#2c5f2dff;">City of Dasmariñas - Preschooler Profiling and Monitoring</span>
-        </a>
-      </div>
-      <div class="buttons">
-        <span id="hideUserLabel":class="brand__name" style="color:#2c5f2dff;"></i>Welcome Admin | </span>
-        <a id="navbutton" href="{% url 'admin_home' %}" ><i class="fa fa-fw fa-home"></i>Home </a>
-        <a id="navbutton" href="{% url 'bhw_validation' %}" ><i class="fa fa-fw fa-user-nurse"></i>Validate BHW </a>
-        <a id="navbutton" href="{% url 'logout' %}" ><i class="fa fa-fw fa-arrow-right"></i>Logout </a>
-      </div>
-      
-      <!-- <div class="dropdown">
-        <button class="btn dropdown-toggle" type="button" id= "Headerddb" data-bs-toggle="dropdown" style="margin-right:15px; color:#ffe77aff"><i class="fa fa-fw fa-user"></i>Admin</button>
-        <ul class="dropdown-menu" id="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Log Out</a></li>
-        </ul>
-      </div> -->
-  </div>
-  </nav>
-</div>
-
-<!-- Side Nav -->
-<div id="mySidenav" class="sidenav">
-  <ul class="list-unstyled ps-0">
-      <div class="buttons">
-        <a id="home" href="/ppms_project/profilingApp/templates/Admin Home.html"><i class="fa fa-fw fa-home"></i>Home</a>
-        <a href="/ppms_project/profilingApp/templates/Admin Validate BHW.html"><i class="fa fa-fw fa-user-nurse"></i>Validate BHW</a>
-      </div>
-      <br>
-  </ul>
-</div>
-<div id="myCanvasNav" onclick="closeOffcanvas()"></div>
-  
+{% extends 'activities/Admin Home.html' %} <!-- header and footer of page linked from admin home html file -->
+{% load static %}
+{% block dashboard %}
 <!-- Dashboard -->
-    <div id="grid" class="container-fluid" style="padding:7%; margin-top:83px;">
-      <div class="container-grid">
-        <div class="container">
-        <div class="row"> 
-            <div class="col">
-                <h3 style="text-align:left;">Validate Barangay Health Workers</h3>
-            </div>
-            <div class="col">
-                <form class="form-inline">
-                    <div class="input-group">
-                        <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </div>
-                </form>
-            </div>
-            </div>
-            <hr>
-            <br>
+<div id="grid" class="container-fluid" style="padding:7%; margin-top:83px;">
+    <div class="container-grid">
+    <div class="container">
+    <div class="row"> 
+        <div class="col">
+            <h3 style="text-align:left;">Validate Barangay Health Workers</h3>
         </div>
+        <div class="col">
+            <form class="form-inline">
+                <div class="input-group">
+                    <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </div>
+            </form>
         </div>
-          <!-- MAIN CARDS STARTS HERE -->
-          <div class="row">
-              <div class="col-xl-3 col-md-4">
-                  <div class="card text-dark bg-light mb-4">
-                      <div class="card-header" style="background-color:rgba(0, 255, 85, 0.205)"><i class="fas fa-check" style="color: green; position:relative; margin-right:10px;"></i>Total No. of Validated BHW</div>
-                      <div class="card-body">
-                          <h5 class="card-title">200</h5>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-xl-3 col-md-4">
-                  <div class="card text-dark bg-light mb-4">
-                      <div class="card-header" style="background-color:rgba(0, 255, 85, 0.205)"><i class="fas fa-spinner" style="color:orange; position:relative; margin-right:10px;"></i>Total No. of Non-Validated BHW</div>
-                      <div class="card-body">
-                          <h5 class="card-title">200</h5>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-xl-3 col-md-4">
-                  <div class="card text-dark bg-light mb-4">
-                      <div class="card-header" style="background-color:rgba(0, 255, 85, 0.205)"><i class="fas fa-user"></i>Total No. of Parents</div>
-                      <div class="card-body">
-                          <h5 class="card-title">200</h5>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-xl-3 col-md-4">
-                  <div class="card text-dark bg-light mb-4">
-                      <div class="card-header" style="background-color:rgba(0, 255, 85, 0.205)"><i class="fas fa-user-circle"></i>Total Number of Preschoolers</div>
-                      <div class="card-body">
-                          <h5 class="card-title">200</h5>
-                      </div>
-                  </div>
-              </div>
-          </div>
-          <hr>
+    </div>
+        <hr>
         <br>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col">
-                    <button class="btn float-end" type="button" id= "parentHomeButton"><i class="fa fa-fw fa-user-shield"></i>Validate Account</button>
-                </div>
-                <div class="col">
-                    <button class="btn" type="button" id= "parentHomeButton"><i class="fa fa-fw fa-user-slash"></i>Delete Profile</button>
+    </div>
+    </div>
+        <!-- MAIN CARDS STARTS HERE -->
+        <div class="row">
+            <div class="col-xl-3 col-md-4">
+                <div class="card text-dark bg-light mb-4">
+                    <div class="card-header" style="background-color:rgba(0, 255, 85, 0.205)"><i class="fas fa-check" style="color: green; position:relative; margin-right:10px;"></i>Total No. of Validated BHW</div>
+                    <div class="card-body">
+                        <h5 class="card-title">200</h5>
+                    </div>
                 </div>
             </div>
-      </div>
-  </div>
-<!-- Form-->
-
-    <!-- Footer -->
-<div class="site-footer" id="footer">
-  <div class="container">
-      <div class="row">
-          <div class="col-lg-4">
-              <h2 class="footer-heading mb-4">About</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                  Modi cumque tenetur inventore veniam, hic vel ipsa necessitatibus 
-                  ducimus architecto fugiat!
-              </p>
-              <div class="my-5">
-                  <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
-              </div>
-          </div>
-          <div class="col-lg-8">
-              <div class="row">
-                  <div class="col-lg-4">
-                      <h2 class="footer-heading mb-4">Quick Links</h2>
-                      <ul class="list-unstyled">
-                      <li><a href="#">FAQs</a></li>
-                      <li><a href="#">Contact Us</a></li>
-                      </ul>
-                  </div>
-                  <div class="col-lg-4">
-                      <h2 class="footer-heading mb-4">Helpful Link</h2>
-                      <ul class="list-unstyled">
-                      <li><a href="#">Healthcare Professional</a></li>
-                      <li><a href="#">LGU Facilities</a></li>
-                      </ul>
-                  </div>
-                  <div class="col-lg-4">
-                      <h2 class="footer-heading mb-4">Resources</h2>
-                      <ul class="list-unstyled">
-                      <li><a href="#">NNC Website</a></li>
-                      <li><a href="#">DOH Website</a></li>
-                      </ul>
-                  </div>
-              </div>
-          </div>
-      </div>
-      <div class="row text-center">
-          <div class="col-md-12">
-              <div class="border-top pt-5">
-                  <p class="copyright"><small>
-                  Copyright ©<script>document.write(new Date().getFullYear());</script> All rights reserved <i class="icon-heart text-danger" aria-hidden="true"></i>
-                  </small>
-                  </p>
-              </div>
-          </div>
-      </div>
-  </div>
+            <div class="col-xl-3 col-md-4">
+                <div class="card text-dark bg-light mb-4">
+                    <div class="card-header" style="background-color:rgba(0, 255, 85, 0.205)"><i class="fas fa-spinner" style="color:orange; position:relative; margin-right:10px;"></i>Total No. of Non-Validated BHW</div>
+                    <div class="card-body">
+                        <h5 class="card-title">200</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-3 col-md-4">
+                <div class="card text-dark bg-light mb-4">
+                    <div class="card-header" style="background-color:rgba(0, 255, 85, 0.205)"><i class="fas fa-user"></i>Total No. of Parents</div>
+                    <div class="card-body">
+                        <h5 class="card-title">200</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-3 col-md-4">
+                <div class="card text-dark bg-light mb-4">
+                    <div class="card-header" style="background-color:rgba(0, 255, 85, 0.205)"><i class="fas fa-user-circle"></i>Total Number of Preschoolers</div>
+                    <div class="card-body">
+                        <h5 class="card-title">200</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr>
+    <br>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <button class="btn float-end" type="button" id= "parentHomeButton"><i class="fa fa-fw fa-user-shield"></i>Validate Account</button>
+            </div>
+            <div class="col">
+                <button class="btn" type="button" id= "parentHomeButton"><i class="fa fa-fw fa-user-slash"></i>Delete Profile</button>
+            </div>
+        </div>
+    </div>
 </div>
-<script src="{% static '/Javascript/js/functions.js' %}"></script>
-<script src="{% static '/Javascript/js/bootstrap.bundle.min.js' %}"></script>
-</body>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="{% static '/Javascript/testscript.js' %}"></script>
-</html>
+{% endblock %}
