--- a/ppms_project/profilingApp/templates/activities/Parent Home.html
+++ b/ppms_project/profilingApp/templates/activities/Parent Home.html
@@ -1,4 +1,5 @@
-<html lang="en">{% load static %}
+{% load static %}
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="{% static '/CSS/styles.css' %}">
     <link rel="stylesheet" href="{% static '/CSS/font-awesome/css/all.min.css' %}">
     <link rel="stylesheet" href="{% static '/CSS/css/bootstrap.min.css' %}">
+    <link rel="icon" href="{% static '/Media/logo.svg' %}" type="image/x-icon">
     <script src="{% static '/Javascript/js/jquery.min.js' %}"></script>
 
     <title>Home</title>
@@ -14,41 +16,26 @@
 <body>
 <!-- Header -->
 <div class="site-header" id="header">
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark index__navbar scrolled" id="header">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark index__navbar scrolled border-bottom" id="header">
       <div class="container-fluid">
         <div>
+          <a href="#" class="name" style="text-decoration: none;">
               <img class="navbar-icon" style="margin-left:15px;" src="../static/Media/avatar.png" alt="dasma-logo">
               <span id="hidetitle" class="brand__name" style="color:#2c5f2dff;">City of Dasmariñas - Preschooler Profiling and Monitoring</span>
           </a>
         </div>
-        <div class="buttons">
-          <span class="brand__name" style="color:#2c5f2dff;"></i><i class="fa fa-fw fa-user"></i>Welcome Guardian | </span>
-          <a id="navbutton" href="{% url 'logout' %}" ><i class="fa fa-fw fa-arrow-right"></i>Logout </a>
-        </div>
-        
-        <!-- <div class="dropdown">
-          <button class="btn dropdown-toggle" type="button" id= "Headerddb" data-bs-toggle="dropdown" style="margin-right:15px; color:#ffe77aff"><i class="fa fa-fw fa-user"></i>Admin</button>
+        <div class="dropdown">
+          <button class="btn dropdown-toggle" type="button" id= "Headerddb" data-bs-toggle="dropdown" style="margin-right:15px; color:#ffe77aff"><i class="fa fa-fw fa-user"></i>Parent</button>
           <ul class="dropdown-menu" id="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Log Out</a></li>
+              <li><a class="dropdown-item" href="{% url 'logout' %}">Log Out</a></li>
           </ul>
-        </div> -->
+        </div>
     </div>
     </nav>
   </div>
-<!-- Side Nav -->
-<!-- <div id="mySidenav" class="sidenav">
-  <ul class="list-unstyled ps-0">
-      <div class="buttons">
-          <a id="home" href="/ppms_project/profilingApp/templates/Admin Home.html"><i class="fa fa-fw fa-home"></i>Home</a>
-          <a href="/ppms_project/profilingApp/templates/Admin Validate BHW.html"><i class="fa fa-fw fa-user-nurse"></i>Validate BHW</a>
-      </div>
-      <br>
-  </ul>
-</div>
-<div id="myCanvasNav" onclick="closeOffcanvas()"></div>
-   -->
+
 <!-- Dashboard -->
-    <div id="grid" class="container-fluid" style="padding:7%; margin-top:83px;background-image: linear-gradient(to top, rgba(245, 255, 231, 0.884), rgb(255, 255, 255));">
+    <div id="grid" class="container-fluid" style="padding:7%;">
       <div class="container-fluid">
         <div class="row"> 
         <div class="col">
